# gastron

./: .gitignore  README.md  pyproject.toml  requirements.txt  tron.py
src/gastron/: __init__.py  ai.py  audio.py  game.py  main.py  menu.py  particles.py  player.py  powerups.py  settings.py  utils.py
tests/: conftest.py  test_ai.py  test_game.py  test_player.py
