[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "gastron"
version = "0.1.0"
description = "Production-ready pygame Tron game with AI, powerups, and tournament mode"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Gastron Contributors" }
]
keywords = ["pygame", "tron", "game", "arcade"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Topic :: Games/Entertainment :: Arcade",
]
dependencies = [
  "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
gastron = "gastron.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
